tests/diagnostics_golden/diag_rule5_overflow.txt
Diagnostics Golden: Rule5 Overflow
Source: tests/negative/neg_rule5_overflow.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule5_overflow.safe:19:14: error: floating expression is not provably within target range
  |
  | 19 |       return small_float (long_float (a) * long_float (b));
  |    |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  |
------------------------------------------------------------------------
